Posiciona listas e textos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="lessons">
             <section>
                 <div class="lado-esquerdo">
-                    <header>
+                    <header class="section-title">
                         <h2>Lições aprendidas</h2>
                     </header>
                     <ol id="licoes_aprendidas">
@@ -38,7 +38,7 @@
             <section>
                 <div class="lado-direito">
                     <header>
-                        <h2>Lições a aprender</h2>
+                        <h2 class="section-title">Lições a aprender</h2>
                     </header>
                     <ul id="licoes_a_aprender">
                         <li>JavaScript</li>
@@ -55,17 +55,31 @@
                 </div>
             </section>
         </div>
-        <section class="sem-float">
-            <header>
-                <h2>E o que estou achando?</h2>
-            </header>
-            <article>
-                <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco. Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer. Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e sou mesmo!).<strong>#VQV</strong></p>
-            </article>
+        <aside class="aside-content">
+            <div>
+                <section>
+                    <header>
+                        <h2 class="section-title">A centralização vertical</h2>
+                    </header>
+                    <article>
+                        <p>Uma novela foi aprender a centralizar verticalmente! Até eu descobrir que no futuro vai ter um jeito mais fácil xD</p>
+                    </article>
+                </section>
+            </div>
+        </aside>
+        <section>
+            <div class="sem-float">
+                <header>
+                    <h2 class="section-title">E o que estou achando?</h2>
+                </header>
+                <article>
+                    <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco. Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer. Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e sou mesmo!).<strong>#VQV</strong></p>
+                </article>
+            </div>
         </section>
         <section class="sem-float">
             <header>
-                <h2>Um breve resumo sobre o currículo da Trybe</h2>
+                <h2 class="section-title">Um breve resumo sobre o currículo da Trybe</h2>
             </header>
             <table>
                 <tr>
@@ -86,16 +100,6 @@
                 </tr>
             </table>
         </section>
-        <aside>
-            <section>
-                <header>
-                    <h2>A centralização vertical</h2>
-                </header>
-                <article>
-                    <p>Uma novela foi aprender a centralizar verticalmente! Até eu descobrir que no futuro vai ter um jeito mais fácil xD</p>
-                </article>
-            </section>
-        </aside>
     </main>
     <footer id="rodape">
         <div class="footer-content-wrapper">
