Fixing article and aside positions, h2 styling

--- a/index.html
+++ b/index.html
@@ -1,78 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
-        <title>Lessons Learned - Projeto</title>
-    </head>
-    <body>
-        <header id="cabecalho">
-            <h1 id="titulo">Lessons Learned</h1>
-        </header>
-        <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
-        <nav>
-            <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
-        </nav>
-        <table id="table">
-            <tr>
-                <th>Nome:</th>
-                <td>Gabriel Galdino</td>
-            </tr>
-            <tr>
-                <th>Idade:</th>
-                <td>25</td>
-            </tr>
-            <tr>
-                <th>Turma:</th>
-                <td>09</td>
-            </tr>
-        </table>
-        <section>
-            <h2>Lições Aprendidas:</h2>
-            <ol id="licoes_aprendidas">
-                <li>Fundamentos do Desenvolvimento Web</li>
-                <li>Introdução - Unix & Shell</li>
-                <li>Unix & Bash</li>
-                <li>Git & GitHub - <em>O que é e pra que serve?</em></li>
-                <li>Git & GitHub - <em>Entendendo comandos</em></li>
-                <li>Fundamentos da Internet - <em>Como ela funciona?</em></li>
-                <li>HTML & CSS - Estrutura de Página</li>
-                <li>HTML & CSS - Iniciando com CSS</li>
-                <li>HTML & CSS - Seletores e Posicionamento</li>
-                <li>HTML Semântico</li>
-            </ol>
-        </section>
-        <section>
-            <h2>Lições que desejo aprender ainda:</h2>
-            <ul id="licoes_a_aprender">
-                <li>Javascript</li>
-                <li>React</li>
-                <li>Metodologias Ágeis</li>
-                <li>Redux</li>
-                <li>SQL</li>
-                <li>MongoDB</li>
-                <li>NodeJS</li>
-                <li>Frameworks</li>
-                <li>Python</li>
-                <li>Soft Skills</li>
-            </ul>
-        </section>
-        <article>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap" rel="stylesheet">
+    <title>Lessons Learned - Projeto</title>
+</head>
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lessons Learned</h1>
+    </header>
+    <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
+    <nav>
+        <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
+    </nav>
+    <table id="table">
+        <tr>
+            <th>Nome:</th>
+            <td>Gabriel Galdino</td>
+        </tr>
+        <tr>
+            <th>Idade:</th>
+            <td>25</td>
+        </tr>
+        <tr>
+            <th>Turma:</th>
+            <td>09</td>
+        </tr>
+    </table>
+    <section id="aprendizados">
+        <h2>Lições Aprendidas:</h2>
+        <ol id="licoes_aprendidas">
+            <li>Fundamentos do Desenvolvimento Web</li>
+            <li>Introdução - Unix & Shell</li>
+            <li>Unix & Bash</li>
+            <li>Git & GitHub - <em>O que é e pra que serve?</em></li>
+            <li>Git & GitHub - <em>Entendendo comandos</em></li>
+            <li>Fundamentos da Internet - <em>Como ela funciona?</em></li>
+            <li>HTML & CSS - Estrutura de Página</li>
+            <li>HTML & CSS - Iniciando com CSS</li>
+            <li>HTML & CSS - Seletores e Posicionamento</li>
+            <li>HTML Semântico</li>
+        </ol>
+        <h2>Lições que desejo aprender ainda:</h2>
+        <ul id="licoes_a_aprender">
+            <li>Javascript</li>
+            <li>React</li>
+            <li>Metodologias Ágeis</li>
+            <li>Redux</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>NodeJS</li>
+            <li>Frameworks</li>
+            <li>Python</li>
+            <li>Soft Skills</li>
+        </ul>
+    </section>
+    <section>
+        <article id="artigo">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod tellus neque, at rhoncus magna sollicitudin ut.
-                Nam odio tellus, porttitor et sodales quis, dignissim faucibus nisl. Vestibulum facilisis, mauris nec vehicula consectetur,
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod tellus neque, at rhoncus magna
+                sollicitudin ut.
+                Nam odio tellus, porttitor et sodales quis, dignissim faucibus nisl. Vestibulum facilisis, mauris nec
+                vehicula consectetur,
                 nunc ex sodales est, venenatis convallis purus nisi ut mauris. Cras tempus risus eu nibh pretium porta.
             </p>
         </article>
-        <aside>
+        <aside id="aside">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod tellus neque, at rhoncus magna sollicitudin ut.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod tellus neque, at rhoncus magna
+                sollicitudin ut.
                 Nam odio tellus, porttitor et sodales quis, dignissim faucibus nisl.
             </p>
         </aside>
-        <footer id="rodape">
-            <em>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</em>
-        </footer>
-    </body>
+    </section>
+    <footer id="rodape">
+        <em>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</em>
+    </footer>
+</body>
 </html>
