--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li>Soft Skills</li>
                     <li>Noção de Rede de Internet</li>
                 </ol>
-                <ol id="licoes_a_aprender">
+                <ul id="licoes_a_aprender">
                     <li>JavaScript</li>
                     <li>React</li>
                     <li>Design responsivo</li>
@@ -61,7 +61,7 @@
                     <li>Mais sobre Soft Skills</li>
                     <li>Estrutura de Dados</li>
                     <li>POO</li>
-                </ol>
+                </ul>
             </section>
 
             <footer id="rodape">
