--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         </nav>
  </header>
  <main id="conteudo_principal">
-        <article>
+        <article id="article_meuaprendizado">
             <header>
                 <h2>O meu aprendizado na Trybe</h2>
             </header>
-            <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo.-
-                São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis.-
-                Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece-
+            <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo.
+                São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis.
+                Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece
                 através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
         </article>
         <section>
@@ -59,9 +59,9 @@
  </main>
  <section id="conteudo_extra">
         <aside id="licoes">
-         <h4>Empatia</h4>
-        <p>A capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
-             com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui-
+            <h4>Aprendizados além - Empatia</h4>
+            <p>A capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar
+             com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui
              na gestão de equipes e influencia positivamente o clima organizacional.</p>
     </aside>
  </section>
