Requisito 07 - adicionado link para outro site que abra em uma nova pagina.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
+        <a href="https://www.linkedin.com/in/igormriegel/" target="_blank">LinkedIn</a>
 
         <section>
             <h2>Lições aprendidas na Trybe:</h2>
