Corrigindo issues do Code Climate

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav id="menu">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="sobre">Sobre</a></li>
-        <li><a href="contato">Contato</a></li>
+        <li><a href="#aprendizado">Aprendizado</a></li>
+        <li><a href="#modulos">Módulos</a></li>
       </ul>
     </nav>
   </header>
@@ -61,7 +61,7 @@
       </ul>
     </section>
     <hr>
-    <article class="aprendizado">
+    <article id="aprendizado">
       <article class="lado-esquerdo">
         <h3>O aprendizado na Trybe</h3>
         <p>
@@ -75,7 +75,7 @@
         </p>
       </aside>
     </article>
-    <section class="modulos">
+    <section id="modulos">
       <h3>- Módulos -</h2>
       <table>
         <tr>
