--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1 id="titulo">Lições aprendidas - TRYBE</h1>
       </header>
       <section id="section-foto">
-        <img id="minha-foto" src="me.png" alt="Igor Machado"/>
-       
+        <img id="minha_foto" src="me.png" alt="Igor Machado"/>
+        <p><strong>Igor Machado</strong></p>
       </section>
 
       <main id="content">
