--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <header>
                 <h2 class="section-title">Um breve resumo sobre o currículo da Trybe</h2>
             </header>
-            <table>
+            <table class="study-themes-table">
                 <tr>
                     <th>Fundamentos do Desenvolvimento Web</th>
                     <td>Unix & Bash, Git, HTML & CSS, JavaScript e testes</td>
