--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                     </tr>
                 </table>
             </div>
-        <div class="lista-ordenada">
+        <div>
             <h3>Lições aprendidas</h3>
+        </div>
+        <div class="lista-ordenada">
             <ol>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -44,10 +46,12 @@
                 <li>Semântica</li>
                 <li>Outline</li>
                 <li>IE</li>
-               </ol>
-            </div>
-        <div class="lista-desordenada">
+            </ol>
+        </div>
+        <div>
             <h3>Lições a aprender</h3>
+        </div>
+        <div class="lista-desordenada">
             <ul>
                 <li>Mover itens em CSS</li>
                 <li>Python</li>
