Algumas correçao e adiçoes de requisitos
- correçoes de code climate
- correçoes de semantica
- correçoes de estilizaçao

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe</h1>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
                 <li>|</li>
                 <li><a href="#licoes">Lições</a></li>
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
+    <main class="container">
         <section>
             <div class="image_base">
                 <img id="minha_foto" src="eu.png" alt="Foto de João Henrique andando de barco">
@@ -65,28 +65,31 @@
             </div>
         </section>
         <section>
-            <h2 id="meu_aprendizado">Meu aprendizado</h2>
-            <article>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo corporis temporibus amet corrupti
-                quasi
-                incidunt recusandae modi voluptate numquam optio, earum nulla! Quam ea deserunt quas temporibus
-                distinctio
-                porro iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde qui quos repudiandae ut
-                praesentium omnis ipsa saepe, laborum sint. Autem dolore excepturi aspernatur rem consequuntur
-                voluptatibus
-                doloribus culpa distinctio sequi!
+            <article class="lado-esquerdo">
+                <h2 id="meu_aprendizado">Meu aprendizado</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo corporis temporibus amet corrupti
+                    quasi
+                    incidunt recusandae modi voluptate numquam optio, earum nulla! Quam ea deserunt quas temporibus
+                    distinctio
+                    porro iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde qui quos repudiandae ut
+                    praesentium omnis ipsa saepe, laborum sint. Autem dolore excepturi aspernatur rem consequuntur
+                    voluptatibus
+                    doloribus culpa distinctio sequi!
+                </p>
             </article>
-        </section>
-        <section>
-            <h2>Uma passagem sobre meu aprendizado</h2>
-            <aside>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime tempore commodi voluptatem rem qui
-                mollitia
-                odio excepturi suscipit enim laborum, tenetur fuga ad nostrum itaque, aut accusantium deleniti aliquid
-                doloribus.
+            <aside class="lado-direito">
+                <h2>Uma passagem sobre meu aprendizado</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime tempore commodi voluptatem rem qui
+                    mollitia
+                    odio excepturi suscipit enim laborum, tenetur fuga ad nostrum itaque, aut accusantium deleniti
+                    aliquid
+                    doloribus.
+                </p>
             </aside>
         </section>
-    </div>
+    </main>
     <footer id="rodape">
         <p>Todos o direitos reservados! <a href="http://henriquesa.tech/" target="_blank">Henrique</a></p>
     </footer>
