--- a/index.html
+++ b/index.html
@@ -8,5 +8,29 @@
     <body>
         <header id="cabecalho"><h1 id="titulo">Tudo que eu aprendir</h1></header>
         <img id="minha_foto" src="foto/foto-hudson.jpg" alt="foto de hudson carlos no shopping" width="500px">
+        <ol id="licoes_aprendidas">
+            <li>Index</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slak</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>SQL</li>
+            <li>JavaScript</li>
+            <li>Dom</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit tests</li>
+            <li>React</li>
+            <li>Node</li>
+        </ul>
     </body>
 </html>
