--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <main>
         <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
         <a href="https://www.linkedin.com/in/igormriegel/" target="_blank">LinkedIn</a>
-
+        <section>
+            <article>
+                <h2>O que aprendi na Trybe...</h2>
+                <p>
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.  
+                </p>
+            </article>
+        </section>
         <section>
             <h2>Lições aprendidas na Trybe:</h2>
             <ol id="licoes_aprendidas">
