--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                 </table>
             </div>
         <div>
-            <h3>Lições aprendidas</h3>
-        </div>
+    </main>
+    <div class="listas">
+        <h3>Lições aprendidas</h3>
         <div class="lista-ordenada">
-            <ol>
+            <ol id="licoes_aprendidas">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Unix</li>
@@ -52,7 +53,7 @@
             <h3>Lições a aprender</h3>
         </div>
         <div class="lista-desordenada">
-            <ul>
+            <ul id="licoes_a_aprender">
                 <li>Mover itens em CSS</li>
                 <li>Python</li>
                 <li>Java Script</li>
@@ -65,7 +66,7 @@
                 <li>Como nao ficar triste</li>
             </ul>
         </div>
-    </main>
+    </div>
     <section class="artigo">
         <article>
             <div class="aprendizado">
