--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Título</h1>
     </header>
-
+    <img id="minha_foto" src="eu.jpeg" alt="Homem sorrindo.">
 </body>
 </html>
