--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
       </ul>
     </section>
     <hr>
-    <article id="aprendizado">
       <article class="lado-esquerdo">
         <h3>O aprendizado na Trybe</h3>
         <p>
           Poder aprender a programar com a Trybe é sem sombra de dúvidas a melhor opção que um estudante pode ter. Tenho certeza que o comprometimento da Trybe ao fornecer as melhores práticas de ensino direcionadas para o mercado de trabalho é um dos fatores que mais vão influenciar no meu sucesso como aluno e posteriormente como um desenvolvedor.
+          <hr>
         </p>
       </article>
       <aside class="lado-direito">
         <h3>Uma passagem sobre meu aprendizado</h3>
         <p>
           Sou estudante de Análise e Desenvolvimento de Sistemas em uma faculdade tradicional e vejo como o ensino brasileiro está defasado e precisando de direcionamento pro mercado de trabalho assim como a Trybe faz.
+          <hr>
         </p>
       </aside>
-    </article>
     <section id="modulos">
-      <h3>- Módulos -</h2>
+      <h3>- MÓDULOS -</h2>
       <table>
         <tr>
           <th>Fundamentos do Desenvolvimento Web</th>
