--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
  <section id="conteudo_extra">
         <aside id="licoes">
             <h4>Aprendizados além - Empatia</h4>
-            <p>A capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar
-             com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui
-             na gestão de equipes e influencia positivamente o clima organizacional.</p>
-    </aside>
+            <p>No ambiente corporativo, saber projetar a personalidade de alguém para que seja possível se identificar
+             com o outro e compreender o que este pensa e sente é uma virtude que contribui com a gestão de equipes e influencia positivamente o clima organizacional.</p>
+        </aside>
  </section>
  <footer id="rodape">
         <p>Project Lessons Learned - Desenvolvido por <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a> </p>
