--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h2>Uma passagem sobre o meu aprendizado</h2>
           <aside id="aside">
             <p>
-              A passagem que chama a minha atenção é sobre as soft skills de inteligência emocial.
+              A passagem que chama a minha atenção é de inteligência emocial.
           </aside>
         </section>
       </main>
