--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             <li>React</li>
             <li>Node</li>
         </ul>
+        <footer id="rodape"><h6>rodapé</h6></footer>
     </body>
 </html>
