correçao quantidade de letras aside e article

--- a/index.html
+++ b/index.html
@@ -67,26 +67,11 @@
         <section>
             <article class="lado-esquerdo">
                 <h2 id="meu_aprendizado">Meu aprendizado</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo corporis temporibus amet corrupti
-                    quasi
-                    incidunt recusandae modi voluptate numquam optio, earum nulla! Quam ea deserunt quas temporibus
-                    distinctio
-                    porro iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde qui quos repudiandae ut
-                    praesentium omnis ipsa saepe, laborum sint. Autem dolore excepturi aspernatur rem consequuntur
-                    voluptatibus
-                    doloribus culpa distinctio sequi!
-                </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat nisi voluptatibus at quasi qui laboriosam cum repellendus ratione obcaecati id voluptatem iste, ab odio fugiat, minima corrupti voluptatum, officiis incidunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae sed et sequi accusantium qui voluptate nam facere quaerat officiis. Ut fugit mollitia dolorem eligendi odio nemo accusantium non ipsam facilis.</p>
             </article>
             <aside class="lado-direito">
                 <h2>Uma passagem sobre meu aprendizado</h2>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime tempore commodi voluptatem rem qui
-                    mollitia
-                    odio excepturi suscipit enim laborum, tenetur fuga ad nostrum itaque, aut accusantium deleniti
-                    aliquid
-                    doloribus.
-                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe necessitatibus iusto a, nisi sunt in magnam laboriosam ipsa. Voluptatem reprehenderit sequi, laboriosam sunt ducimus suscipit minima. Nisi temporibus rem exercitationem.</p>
             </aside>
         </section>
     </main>
