Corrigindo issues do Code Climate

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <nav id="menu">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#aprendizado">Aprendizado</a></li>
         <li><a href="#modulos">Módulos</a></li>
       </ul>
     </nav>
@@ -69,9 +68,9 @@
         </p>
       </article>
       <aside class="lado-direito">
-        <h3>Uma passagem sobre meu aprendizado</h3>
+        <h3>Passagem sobre meu aprendizado</h3>
         <p>
-          Sou estudante de Análise e Desenvolvimento de Sistemas em uma faculdade tradicional e vejo como o ensino brasileiro está defasado e precisando de direcionamento pro mercado de trabalho assim como a Trybe faz.
+          Sou estudante de Análise e Des. de Sistemas em uma faculdade tradicional e vejo como o ensino brasileiro está defasado e precisando de direcionamento pro mercado de trabalho assim como a Trybe faz.
           <hr>
         </p>
       </aside>
