--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="section-article">
           <h2>Meu aprendizado na Trybe</h2>
           <article id="article">
-            <p>Estou a pouco tempo , porém o curso é muito bom. Oferencedo uma excelente didática
+            <p>Estou a pouco tempo , porém o curso é muito bom.
               
             </p>
           </article>
