Corrigindo issues do Code Climate

--- a/index.html
+++ b/index.html
@@ -68,11 +68,8 @@
         </p>
       </article>
       <aside class="lado-direito">
-        <h3>Passagem sobre meu aprendizado</h3>
-        <p>
-          Sou estudante de Análise e Des. de Sistemas em uma faculdade tradicional e vejo como o ensino brasileiro está defasado e precisando de direcionamento pro mercado de trabalho assim como a Trybe faz.
-          <hr>
-        </p>
+        <h3>Meu aprendizado</h3>
+        <p>Sou estudante de Análise e Des. de Sistemas em uma faculdade tradicional e vejo como o ensino brasileiro está defasado e precisando de direcionamento pro mercado de trabalho assim como a Trybe faz.<hr></p>
       </aside>
     <section id="modulos">
       <h3>- MÓDULOS -</h2>
