Modificações para codeclimate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -9,72 +10,78 @@
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe</h1>
     <nav>
-      <a href="/" >Inicio</a>
+      <a href="/">Inicio</a>
       <a href="https://github.com/edersonrdg" target="_blank">Meu github</a>
     </nav>
   </header>
   <div id="page_content">
-  <main>
-    <div id="main_content">
-    <img src='./assets/ed.jpg' alt="Ederson image" id="minha_foto" width="200px">
-    <div class="article_content">
-      <div id="sub_title main">
-        <h2 class="sub_title">Sobre mim</h2>
+    <main>
+      <div id="main_content">
+        <img src='./assets/ed.jpg' alt="Ederson image" id="minha_foto" width="200px">
+        <div class="article_content">
+          <div id="sub_title main">
+            <h2 class="sub_title">Sobre mim</h2>
+          </div>
+          <article class="lado-esquerdo">
+            Olá, me chamo Ederson rodrigo da silva lopes, tenho 19 anos e moro em fortaleza, capital do ceará.
+            em novembro de 2020 entrei para escola de programação Trybe, onde eu me matriculei no intuito de obter um
+            conhecimento mais profissional sobre desenvolvimento de softwares. Desde 2019 tenho um sonho de poder
+            trabalhar
+            desenvolvendo softwares, pois naminha visão, é uma área da tecnologia que trabalha tanto o raciocínio quanto
+            a imaginação e
+            é este fato que me motiva a querer trabalhar com isso.
+          </article>
+        </div>
       </div>
-    <article class="lado-esquerdo">
-        Olá, me chamo Ederson rodrigo da silva lopes, tenho 19 anos e moro em fortaleza, capital do ceará.
-        em novembro de 2020 entrei para escola de programação Trybe, onde eu me matriculei no intuito de obter um
-        conhecimento mais profissional sobre desenvolvimento de softwares. Desde 2019 tenho um sonho de poder trabalhar
-        desenvolvendo softwares, pois naminha visão, é uma área da tecnologia que trabalha tanto o raciocínio quanto a imaginação e
-        é este fato que me motiva a querer trabalhar com isso.
-    </article>
+    </main>
+    <aside>
+      <h2 class="sub_title arct_posit">Aprendizados</h2>
+      <section class="lado-direito">Comecei primeiramente a entender sobre linux e Unix, logo após
+        Entendi mais sobre como funciona a web por baixo dos panos. No outro dia
+        Aprendi conceitos sobre git alem de github. Tive tambem uma breve introdução sobre HTML com apresentação de
+        algumas tags além de uma
+        introdução sobre CSS. Após isso e por utimo aprendi sobre os conceitos de HTML semântico
+      </section>
+    </aside>
   </div>
+  <div id="list">
+    <h2 class="sub_title">Lições</h2>
+    <div id="list_content">
+      <ol id="licoes_aprendidas">
+        <h3>lições aprendidas</h3>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspec</li>
+        <li>Semantic HTML</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <h3>Lições que desejo aprender</h3>
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+    </div>
   </div>
-  </main>
-  <aside>
-    <h2 class="sub_title arct_posit">Aprendizados</h2>
-    <section class="lado-direito">Comecei primeiramente a entender sobre linux e Unix, logo após
-Entendi mais sobre como funciona a web por baixo dos panos. No outro dia
-Aprendi conceitos sobre git alem de github. Tive tambem uma breve introdução sobre HTML com apresentação de algumas tags além de uma
-introdução sobre CSS. Após isso e por utimo aprendi sobre os conceitos de HTML semântico
-    </section>
-  </aside>
-</div>
-<div id="list">
-  <h2 class="sub_title">Lições</h2>
-  <div id="list_content">
-  <ol id="licoes_aprendidas">
-    <h3>lições aprendidas</h3>
-    <li>Unix</li>
-    <li>Git</li>
-    <li>Github</li>
-    <li>Empatia</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Slack</li>
-    <li>Zoom</li>
-    <li>Inspec</li>
-    <li>Semantic HTML</li>
-  </ol>
-  <ul id="licoes_a_aprender">
-    <h3>Lições que desejo aprender</h3>
-    <li>Javascript</li>
-    <li>DOM</li>
-    <li>Forms</li>
-    <li>CSS Responsive</li>
-    <li>ES6</li>
-    <li>HOF</li>
-    <li>Unit Tests</li>
-    <li>React</li>
-    <li>Node</li>
-    <li>SQL</li>
-
-</div>
-</div>
-<footer id="rodape"><H4>Direitos reservados, Ederson</H4></footer>
+  <footer id="rodape">
+    <H4>Direitos reservados, Ederson</H4>
+  </footer>
 </body>
+
 </html>
