Requisito 09 - FIX - TAG ASIDE. para criaçao de item sobre aprendizado.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
                 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.  
                 </p>
             </article>
+            <aside>
+                <h2>Algo legal sobre aprendizagem</h2>
+                <p>
+                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separ.
+                coast of the Semantics, a large language ocean. A small river named Duden flows by their place.
+            </aside>
         </section>
-        <aside>
+        <section>
             <h2>Lições aprendidas na Trybe:</h2>
             <ol id="licoes_aprendidas">
                 <li>Como operar o shell</li>
@@ -37,7 +43,7 @@
                 <li>Entendimento básico de como a internet funciona</li>
                 <li>Como exercitar a empatia no ambiente de trabalho</li>
             </ol>
-        </aside>
+        </section>
 
         <section>
             <h2>Lições que ainda vou aprender:</h2>
