Alterando tag aside para section codeline 27

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <figure>
         <img id="minha_foto" src="/images/leo-pic.png" alt="Foto de Leonardo Majevski">
       </figure>
-      <aside>
+      <section>
         <h3>#beTrybe!</h3>
         <p>Leonardo Majevski é aluno da <a href="https://betrybe.com" target="_blank">Trybe</a>. Faça como ele e não perca tempo, estude na melhor escola de programação da galáxia!</p>
-      </aside>
+      </section>
       <hr>
     </section>
     <section id="licoes">
