Alterando o nome do id

--- a/index.html
+++ b/index.html
@@ -15,34 +15,30 @@
   <img id="minha_foto" src="/foto-perfil.jpeg" >
   <article id="lista-materias">
     <h1>Lições aprendidas</h1>
-    <div id="licoes_aprendidas">
-      <ol>
-        <li>Empatia</li>
-        <li>Git - comandos</li>
-        <li>Github</li>
-        <li>Versionamento</li>
-        <li>Comandos Bash</li>
-        <li>Shell</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Versionamento</li>
-        <li>Código de ética</li>
-      </ol>
-    </div>
-    <div id="licoes_a_aprender">
-      <ul>
-        <li>Javascript</li>
-        <li>EMC6</li>
-        <li>Javascript performático</li>
-        <li>Arrays</li>
-        <li>Callbacks</li>
-        <li>Shell</li>
-        <li>Javascript - DOM e seletores</li>
-        <li>React Hooks</li>
-        <li>SQL</li>
-        <li>MongoDB</li>
-      </ul>
-    </div>
+    <ol id="licoes_aprendidas">
+      <li>Empatia</li>
+      <li>Git - comandos</li>
+      <li>Github</li>
+      <li>Versionamento</li>
+      <li>Comandos Bash</li>
+      <li>Shell</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Versionamento</li>
+      <li>Código de ética</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+      <li>Javascript</li>
+      <li>EMC6</li>
+      <li>Javascript performático</li>
+      <li>Arrays</li>
+      <li>Callbacks</li>
+      <li>Shell</li>
+      <li>Javascript - DOM e seletores</li>
+      <li>React Hooks</li>
+      <li>SQL</li>
+      <li>MongoDB</li>
+    </ul>
   </article>
   <article div="aprendizado">
     Estudar na Trybe tem sido desafiador, a forma como nos apresentam o conteúdo, a atenção de todos os envolvidos e o material que nos instrui é excelente.
