Corrigindo erros dos requisitos 8 e 9 - tentativa 5

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <article class="sobre_aprendizado lado-esquerdo">
                 <h2 class="titulo-article">Meu apredizado na Trybe</h2>
                 <p class="text-artigo">
-                    Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizer apenas de habilidades técnicas, vai além. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia e simplicidade. Humildade em me colocar no lugar do outro e assim exercer o meu trabalho de forma muito mais concreta e coesa. Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.
+                    Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizer apenas de habilidades técnicas, vai além. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia, simplicidade, humildade. Como está sendo o meu aprendizado?  Profundo, transformador, original e concreto.
                 </p>
             </article>
             <aside class="lado-direito">
                 <h2 class="titulo-article">#Vamoquevamo</h2>
                 <p class="text-artigo">
-                    É certo que muitas das nossas grande escolhas nos geram medos e inseguranças. Mas escolher estar na Trybe foi e será a mais acertada que já tomei. Com medo? Sim! Mas que me tornará um novo programador e uma pessoa melhor!
+                    É certo que muitas das nossas grande escolhas nos geram medos e inseguranças. Mas escolher estar na Trybe foi e será a mais acertada que já tomei!
                 </p>
             </aside>
         </section>
