Corrige requisito faltante e erros do CC

--- a/index.html
+++ b/index.html
@@ -56,26 +56,19 @@
             </section>
         </div>
         <aside class="aside-content">
-            <div>
-                <section>
-                    <header>
-                        <h2 class="section-title">A centralização vertical</h2>
-                    </header>
-                    <article>
-                        <p>Uma novela foi aprender a centralizar verticalmente! Até eu descobrir que no futuro vai ter um jeito mais fácil xD</p>
-                    </article>
-                </section>
-            </div>
-        </aside>
-        <section>
-            <div class="sem-float">
-                <header>
-                    <h2 class="section-title">E o que estou achando?</h2>
-                </header>
+            <section>
                 <article>
-                    <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco. Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer. Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e sou mesmo!).<strong>#VQV</strong></p>
+                    <p>Centralizar verticalmente é muito difícil! Até descobrir que aprendemos um jeito mais fácil xD</p>
                 </article>
-            </div>
+            </section>
+        </aside>
+        <section class="sem-float">
+            <header>
+                <h2 class="section-title">E o que estou achando?</h2>
+            </header>
+            <article>
+                <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco. Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer. Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e sou mesmo!).<strong>#VQV</strong></p>
+            </article>
         </section>
         <section class="sem-float">
             <header>
