--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lições aprendidas | Trybe</title>
+    <title>Lições aprendidas Trybe</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <img src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli" id="minha_foto">
+        <img id="minha_foto" src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli">
             <div class="tabela">
                 <table>
                     <tr>
