--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header id="cabecalho">
+  <header id="cabecalho" class="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
     <nav>
       <ul>
@@ -50,7 +50,7 @@
           <li>NodeJS</li>
         </ul>
       </section>
-          <section id="table">
+          <section id="table" class="table">
         <h2>Tabela de Soft e Hard Skills</h2>
         <table>
           <tr>
