--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ul>
             <article id="artigo">
                 <h2>Meu Aprendizado</h2>
-                <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
+                <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado. </p>
             </article>
             <aside id="secao">
                 <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
