Corrigindo verificação de semântica do Achecker

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -103,7 +103,7 @@
       </table>
     </section>
     <footer id="rodape">
-      <p><i class="fas fa-code"></i> por Leonardo Majevski &copy; 2020</p>
+      <p><em class="fas fa-code"></em> por Leonardo Majevski &copy; 2020</p>
     </footer>
   </main>
 </body>
