Finalização do esqueleto do site

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <td>Palavras 3</td>
             </tr>
         </table>
+        <div id="Learn-history">
+            <h3>Uma passagem sobre meu aprendizado</h3>
+            <p>git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"</p>
+        </div>
     </aside>
 
     <main>
